@@ -19,6 +19,9 @@ version 2.7.4 (MM/DD/YYYY):
 	  Settings plugin.
 	* Use GRegex for the debug window where available. This brings regex
 	  filtering to the debug window on Windows. (Eion Robb) (#12601)
+	* Add Google Chrome to the list of possible browsers on non-Windows
+	  systems.
+	* Add Chromium to the list of possible browsers on non-Windows systems.
 
 	Finch:
 	* Add support for drop-down account options (like the SILC cipher
